name:                seqexec-engine
version:             0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Danny Navarro
maintainer:          j@dannynavarro.net
-- copyright:           
category:            System
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable seqexec-engine
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.10,
                       transformers,
                       async
  -- hs-source-dirs:      
  default-language:    Haskell2010
  ghc-options:         -Wall
